fix(revenue-maintenance): sửa lỗi phí mở shop lịch sử và nâng cấp phân quyền chế độ bảo trì